--- a/main.html
+++ b/main.html
@@ -10,7 +10,28 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form action="" method="post">
+<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name">
+	<br><br>
+	<label for="phone">Phone Number</label>
+	<input type="text" id="phone" placeholder="Phone Number">
+	<br><br>
+	<label for="address">Address</label>
+	<input type="text" id="address" placeholder="Address">
+	<br><br>
+	<label for="checkbox">Have you ever lived with a Dog before?</label>
+	<input type="checkbox" id="checkbox" placeholder="Have you ever lived with a Dog before?">
+	<br><br>
+	<label for="multiselect">Please select your preferred breeds</label>
+	<select id="multiselect" multiple>
+		<option value="labra">labra</option>
+		<option value="jerman">jerman</option>
+		<option value="pitbull">pitbull</option>
+	</select>
+	<br><br>
+	<input type="submit" id="submit" value="submit">
+</form>
 </body>
 
 </html>
