--- a/main.html
+++ b/main.html
@@ -21,16 +21,16 @@
 	<input type="text" id="address" placeholder="Address">
 	<br><br>
 	<label for="checkbox">Have you ever lived with a Dog before?</label>
-	<input type="checkbox" id="checkbox" placeholder="Have you ever lived with a Dog before?">
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 	<br><br>
-	<label for="multiselect">Please select your preferred breeds</label>
-	<select id="multiselect" multiple>
+	<label for="multiSelect">Please select your preferred breeds</label>
+	<select id="multiSelect" multiple>
 		<option value="labra">labra</option>
 		<option value="jerman">jerman</option>
 		<option value="pitbull">pitbull</option>
 	</select>
 	<br><br>
-	<input type="submit" id="submit" value="submit">
+	<input type="submit" id="submit" value="Submit">
 </form>
 </body>
 
